includes/svdpi.h

typedef svScalar svBit; /* scalar */
typedef svScalar svLogic; /* scalar */
/* (a chunk of) packed logic array */
typedef s_vpi_vecval svLogicVecVal;
/* (a chunk of) packed bit array */
typedef uint32_t svBitVecVal;
XXTERN void svGetPartselLogic (svLogicVecVal * d, const svLogicVecVal * s, int i, int w);
XXTERN void svPutPartselBit (svBitVecVal * d, const svBitVecVal s, int i, int w);
XXTERN void svPutPartselLogic (svLogicVecVal * d, const svLogicVecVal s, int i, int w);
/*
 * Open array querying functions
 * These functions are modeled upon the SystemVerilog array
 * querying functions and use the same semantics.
 *
 * If the dimension is 0, then the query refers to the
 * packed part of an array (which is one dimensional).
 * Dimensions > 0 refer to the unpacked part of an array.
 */
/* h= handle to open array, d=dimension */
XXTERN int svLeft (const svOpenArrayHandle h, int d);
XXTERN int svRight (const svOpenArrayHandle h, int d);
XXTERN int svLow (const svOpenArrayHandle h, int d);
XXTERN int svHigh (const svOpenArrayHandle h, int d);
XXTERN int svIncrement (const svOpenArrayHandle h, int d);
XXTERN int svLength (const svOpenArrayHandle h, int d);
XXTERN int svSize (const svOpenArrayHandle h, int d);
XXTERN int svDimensions (const svOpenArrayHandle h);
/*
 * Pointer to the actual representation of the whole array of any type
 * NULL if not in C layout
 */
XXTERN void * svGetArrayPtr (const svOpenArrayHandle);
/* total size in bytes or 0 if not in C layout */
XXTERN int svSizeOfArray (const svOpenArrayHandle);
/*
 * Return a pointer to an element of the array
 * or NULL if index outside the range or null pointer
 */
XXTERN void * svGetArrElemPtr (const svOpenArrayHandle, int indx1, ...);
/* specialized versions for 1-, 2- and 3-dimensional arrays: */
XXTERN void * svGetArrElemPtr1 (const svOpenArrayHandle, int indx1);
XXTERN void * svGetArrElemPtr2 (const svOpenArrayHandle, int indx1, int indx2);
XXTERN void * svGetArrElemPtr3 (const svOpenArrayHandle, int indx1, int indx2,
                                int indx3);
/*
 * Functions for copying between simulator storage and user space.
 * These functions copy the whole packed array in either direction.
 * The user is responsible for allocating an array to hold the
 * canonical representation.
 */

/* s=source, d=destination */
/* From user space into simulator storage */
XXTERN void svPutBitArrElemVecVal (const svOpenArrayHandle d, const svBitVecVal * s,
                                   int indx1, ...);
XXTERN void svPutBitArrElem1VecVal (const svOpenArrayHandle d, const svBitVecVal * s,
                                    int indx1);
XXTERN void svPutBitArrElem2VecVal (const svOpenArrayHandle d, const svBitVecVal * s,
                                    int indx1, int indx2);
XXTERN void svPutBitArrElem3VecVal (const svOpenArrayHandle d, const svBitVecVal * s,
                                    int indx1, int indx2, int indx3);
XXTERN void svPutLogicArrElemVecVal (const svOpenArrayHandle d, const svLogicVecVal * s,
                                     int indx1, ...);
XXTERN void svPutLogicArrElem1VecVal (const svOpenArrayHandle d, const svLogicVecVal * s,
                                      int indx1);
XXTERN void svPutLogicArrElem2VecVal (const svOpenArrayHandle d, const svLogicVecVal * s,
                                      int indx1, int indx2);
XXTERN void svPutLogicArrElem3VecVal (const svOpenArrayHandle d, const svLogicVecVal * s,
                                      int indx1, int indx2, int indx3);
/* From simulator storage into user space */
XXTERN void svGetBitArrElemVecVal (svBitVecVal * d, const svOpenArrayHandle s,
                                   int indx1, ...);
XXTERN void svGetBitArrElem1VecVal (svBitVecVal * d, const svOpenArrayHandle s,
                                    int indx1);
XXTERN void svGetBitArrElem2VecVal (svBitVecVal * d, const svOpenArrayHandle s,
                                    int indx1, int indx2);
XXTERN void svGetBitArrElem3VecVal (svBitVecVal * d, const svOpenArrayHandle s,
                                    int indx1, int indx2, int indx3);
XXTERN void svGetLogicArrElemVecVal (svLogicVecVal * d, const svOpenArrayHandle s,
                                     int indx1, ...);
XXTERN void svGetLogicArrElem1VecVal (svLogicVecVal * d, const svOpenArrayHandle s,
                                      int indx1);
XXTERN void svGetLogicArrElem2VecVal (svLogicVecVal * d, const svOpenArrayHandle s,
                                      int indx1, int indx2);
XXTERN void svGetLogicArrElem3VecVal (svLogicVecVal * d, const svOpenArrayHandle s,
                                      int indx1, int indx2, int indx3);
XXTERN svBit svGetBitArrElem (const svOpenArrayHandle s, int indx1, ...);
XXTERN svBit svGetBitArrElem1 (const svOpenArrayHandle s, int indx1);
XXTERN svBit svGetBitArrElem2 (const svOpenArrayHandle s, int indx1, int indx2);
XXTERN svBit svGetBitArrElem3 (const svOpenArrayHandle s, int indx1, int indx2,
                               int indx3);
XXTERN svLogic svGetLogicArrElem (const svOpenArrayHandle s, int indx1, ...);