wrapper/svdpi_wrapper.nim

else:
  static :
    hint("Declaration of " & "svGetPartselLogic" &
        " already exists, not redeclaring")
when not declared(svPutPartselBit):
  proc svPutPartselBit*(d: ptr svBitVecVal_1090519508; s: svBitVecVal_1090519508;
                        i: cint; w: cint): void {.cdecl,
      importc: "svPutPartselBit".}
else:
  static :
    hint("Declaration of " & "svPutPartselBit" &
        " already exists, not redeclaring")
when not declared(svPutPartselLogic):
  proc svPutPartselLogic*(d: ptr svLogicVecVal_1090519506; s: svLogicVecVal_1090519506;
                          i: cint; w: cint): void {.cdecl,
      importc: "svPutPartselLogic".}
else:
  static :
    hint("Declaration of " & "svPutPartselLogic" &
        " already exists, not redeclaring")
when not declared(svLeft):
  proc svLeft*(h: svOpenArrayHandle_1090519512; d: cint): cint {.cdecl,
      importc: "svLeft".}
else:
  static :
    hint("Declaration of " & "svLeft" & " already exists, not redeclaring")
when not declared(svRight):
  proc svRight*(h: svOpenArrayHandle_1090519512; d: cint): cint {.cdecl,
      importc: "svRight".}
else:
  static :
    hint("Declaration of " & "svRight" & " already exists, not redeclaring")
when not declared(svLow):
  proc svLow*(h: svOpenArrayHandle_1090519512; d: cint): cint {.cdecl,
      importc: "svLow".}
else:
  static :
    hint("Declaration of " & "svLow" & " already exists, not redeclaring")
when not declared(svHigh):
  proc svHigh*(h: svOpenArrayHandle_1090519512; d: cint): cint {.cdecl,
      importc: "svHigh".}
else:
  static :
    hint("Declaration of " & "svHigh" & " already exists, not redeclaring")
when not declared(svIncrement):
  proc svIncrement*(h: svOpenArrayHandle_1090519512; d: cint): cint {.cdecl,
      importc: "svIncrement".}
else:
  static :
    hint("Declaration of " & "svIncrement" & " already exists, not redeclaring")
when not declared(svLength):
  proc svLength*(h: svOpenArrayHandle_1090519512; d: cint): cint {.cdecl,
      importc: "svLength".}
else:
  static :
    hint("Declaration of " & "svLength" & " already exists, not redeclaring")
when not declared(svSize):
  proc svSize*(h: svOpenArrayHandle_1090519512; d: cint): cint {.cdecl,
      importc: "svSize".}
else:
  static :
    hint("Declaration of " & "svSize" & " already exists, not redeclaring")
when not declared(svDimensions):
  proc svDimensions*(h: svOpenArrayHandle_1090519512): cint {.cdecl,
      importc: "svDimensions".}
else:
  static :
    hint("Declaration of " & "svDimensions" & " already exists, not redeclaring")
when not declared(svGetArrayPtr):
  proc svGetArrayPtr*(a0: svOpenArrayHandle_1090519512): pointer {.cdecl,
      importc: "svGetArrayPtr".}
else:
  static :
    hint("Declaration of " & "svGetArrayPtr" &
        " already exists, not redeclaring")
when not declared(svSizeOfArray):
  proc svSizeOfArray*(a0: svOpenArrayHandle_1090519512): cint {.cdecl,
      importc: "svSizeOfArray".}
else:
  static :
    hint("Declaration of " & "svSizeOfArray" &
        " already exists, not redeclaring")
when not declared(svGetArrElemPtr):
  proc svGetArrElemPtr*(a0: svOpenArrayHandle_1090519512; indx1: cint): pointer {.
      cdecl, varargs, importc: "svGetArrElemPtr".}
else:
  static :
    hint("Declaration of " & "svGetArrElemPtr" &
        " already exists, not redeclaring")
when not declared(svGetArrElemPtr1):
  proc svGetArrElemPtr1*(a0: svOpenArrayHandle_1090519512; indx1: cint): pointer {.
      cdecl, importc: "svGetArrElemPtr1".}
else:
  static :
    hint("Declaration of " & "svGetArrElemPtr1" &
        " already exists, not redeclaring")
when not declared(svGetArrElemPtr2):
  proc svGetArrElemPtr2*(a0: svOpenArrayHandle_1090519512; indx1: cint;
                         indx2: cint): pointer {.cdecl,
      importc: "svGetArrElemPtr2".}
else:
  static :
    hint("Declaration of " & "svGetArrElemPtr2" &
        " already exists, not redeclaring")
when not declared(svGetArrElemPtr3):
  proc svGetArrElemPtr3*(a0: svOpenArrayHandle_1090519512; indx1: cint;
                         indx2: cint; indx3: cint): pointer {.cdecl,
      importc: "svGetArrElemPtr3".}
else:
  static :
    hint("Declaration of " & "svGetArrElemPtr3" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElemVecVal):
  proc svPutBitArrElemVecVal*(d: svOpenArrayHandle_1090519512;
                              s: ptr svBitVecVal_1090519508; indx1: cint): void {.
      cdecl, varargs, importc: "svPutBitArrElemVecVal".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElemVecVal" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem1VecVal):
  proc svPutBitArrElem1VecVal*(d: svOpenArrayHandle_1090519512;
                               s: ptr svBitVecVal_1090519508; indx1: cint): void {.
      cdecl, importc: "svPutBitArrElem1VecVal".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem1VecVal" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem2VecVal):
  proc svPutBitArrElem2VecVal*(d: svOpenArrayHandle_1090519512;
                               s: ptr svBitVecVal_1090519508; indx1: cint;
                               indx2: cint): void {.cdecl,
      importc: "svPutBitArrElem2VecVal".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem2VecVal" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem3VecVal):
  proc svPutBitArrElem3VecVal*(d: svOpenArrayHandle_1090519512;
                               s: ptr svBitVecVal_1090519508; indx1: cint;
                               indx2: cint; indx3: cint): void {.cdecl,
      importc: "svPutBitArrElem3VecVal".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem3VecVal" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElemVecVal):
  proc svPutLogicArrElemVecVal*(d: svOpenArrayHandle_1090519512;
                                s: ptr svLogicVecVal_1090519506; indx1: cint): void {.
      cdecl, varargs, importc: "svPutLogicArrElemVecVal".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElemVecVal" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem1VecVal):
  proc svPutLogicArrElem1VecVal*(d: svOpenArrayHandle_1090519512;
                                 s: ptr svLogicVecVal_1090519506; indx1: cint): void {.
      cdecl, importc: "svPutLogicArrElem1VecVal".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem1VecVal" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem2VecVal):
  proc svPutLogicArrElem2VecVal*(d: svOpenArrayHandle_1090519512;
                                 s: ptr svLogicVecVal_1090519506; indx1: cint;
                                 indx2: cint): void {.cdecl,
      importc: "svPutLogicArrElem2VecVal".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem2VecVal" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem3VecVal):
  proc svPutLogicArrElem3VecVal*(d: svOpenArrayHandle_1090519512;
                                 s: ptr svLogicVecVal_1090519506; indx1: cint;
                                 indx2: cint; indx3: cint): void {.cdecl,
      importc: "svPutLogicArrElem3VecVal".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem3VecVal" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElemVecVal):
  proc svGetBitArrElemVecVal*(d: ptr svBitVecVal_1090519508;
                              s: svOpenArrayHandle_1090519512; indx1: cint): void {.
      cdecl, varargs, importc: "svGetBitArrElemVecVal".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElemVecVal" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem1VecVal):
  proc svGetBitArrElem1VecVal*(d: ptr svBitVecVal_1090519508;
                               s: svOpenArrayHandle_1090519512; indx1: cint): void {.
      cdecl, importc: "svGetBitArrElem1VecVal".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem1VecVal" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem2VecVal):
  proc svGetBitArrElem2VecVal*(d: ptr svBitVecVal_1090519508;
                               s: svOpenArrayHandle_1090519512; indx1: cint;
                               indx2: cint): void {.cdecl,
      importc: "svGetBitArrElem2VecVal".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem2VecVal" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem3VecVal):
  proc svGetBitArrElem3VecVal*(d: ptr svBitVecVal_1090519508;
                               s: svOpenArrayHandle_1090519512; indx1: cint;
                               indx2: cint; indx3: cint): void {.cdecl,
      importc: "svGetBitArrElem3VecVal".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem3VecVal" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElemVecVal):
  proc svGetLogicArrElemVecVal*(d: ptr svLogicVecVal_1090519506;
                                s: svOpenArrayHandle_1090519512; indx1: cint): void {.
      cdecl, varargs, importc: "svGetLogicArrElemVecVal".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElemVecVal" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem1VecVal):
  proc svGetLogicArrElem1VecVal*(d: ptr svLogicVecVal_1090519506;
                                 s: svOpenArrayHandle_1090519512; indx1: cint): void {.
      cdecl, importc: "svGetLogicArrElem1VecVal".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem1VecVal" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem2VecVal):
  proc svGetLogicArrElem2VecVal*(d: ptr svLogicVecVal_1090519506;
                                 s: svOpenArrayHandle_1090519512; indx1: cint;
                                 indx2: cint): void {.cdecl,
      importc: "svGetLogicArrElem2VecVal".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem2VecVal" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem3VecVal):
  proc svGetLogicArrElem3VecVal*(d: ptr svLogicVecVal_1090519506;
                                 s: svOpenArrayHandle_1090519512; indx1: cint;
                                 indx2: cint; indx3: cint): void {.cdecl,
      importc: "svGetLogicArrElem3VecVal".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem3VecVal" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem):
  proc svGetBitArrElem*(s: svOpenArrayHandle_1090519512; indx1: cint): svBit_1090519496 {.
      cdecl, varargs, importc: "svGetBitArrElem".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem1):
  proc svGetBitArrElem1*(s: svOpenArrayHandle_1090519512; indx1: cint): svBit_1090519496 {.
      cdecl, importc: "svGetBitArrElem1".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem1" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem2):
  proc svGetBitArrElem2*(s: svOpenArrayHandle_1090519512; indx1: cint;
                         indx2: cint): svBit_1090519496 {.cdecl,
      importc: "svGetBitArrElem2".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem2" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem3):
  proc svGetBitArrElem3*(s: svOpenArrayHandle_1090519512; indx1: cint;
                         indx2: cint; indx3: cint): svBit_1090519496 {.cdecl,
      importc: "svGetBitArrElem3".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem3" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem):
  proc svGetLogicArrElem*(s: svOpenArrayHandle_1090519512; indx1: cint): svLogic_1090519498 {.
      cdecl, varargs, importc: "svGetLogicArrElem".}
